instructlab/ui/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ui
  namespace: instructlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ui
      app.kubernetes.io/instance: ui
      app.kubernetes.io/name: ui
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ui
        app.kubernetes.io/instance: ui
        app.kubernetes.io/name: ui
    spec:
      containers:
        - name: ui
          image: quay.io/instructlab-ui/ui:main
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
          volumeMounts:
            - mountPath: "/opt/app-root/src/.env"
              subPath: ".env"
              name: env-vol
              readOnly: true
      volumes:
        - name: env-vol
          secret:
            secretName: ilab-ui-env
            items:
            - key: ".env"
              path: ".env"
      restartPolicy: Always
