instructlab/ui/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ui
  namespace: instructlab
spec:
  path: /
  to:
    kind: Service
    name: ui
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
